<resources>
    <string name="app_name">TquesT</string>
    <string name="quest">Quest</string>
    <string name="let_s_play_and">Let\'s Play And</string>
    <string name="have_some_fun">Have Some Fun</string>
    <string name="basic">Basic</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="question1">50 Questions</string>
    <string name="intermediate">Intermediate</string>
    <string name="fill_in_the_blank">Fill in the Blank</string>
    <string name="debugging">Debugging</string>
    <string name="_10_questions">10 Questions</string>
    <string name="basic_level">Basic Level</string>
    <string name="score">Score</string>
    <string name="score_board">Score Board</string>
    <string name="total_score">Total Score:</string>
    <string name="_0">0</string>
    <string name="partial_score">Partial Score:</string>
    <string name="_50">/50</string>
    <string name="question">Question</string>
    <string name="intermediate_level">Intermediate Level</string>
    <string name="hard_level">Hard Level</string>
    <string name="create_question">Create Question</string>
    <string name="create_basic_question">Create Basic Question</string>
    <string name="create_hard_question">create_Hard_question</string>
    <string name="create_intermediate_question">Create Intermediate Question</string>
    <string name="start">Start</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="total_correct_answer">Total Correct Answer</string>
    <string name="_30_questions">30 Questions</string>
    <string name="percentage">Percentage</string>
    <string name="percentage_score">Percentage Score</string>
    <string name="true_or_false">True or False</string>
    <string name="tquest">TquesT</string>
    <string name="study_guide">Study Guide</string>
    <string name="basic_intermediate"><![CDATA[Basic & Intermediate]]></string>
    <string name="datatypes">DataTypes</string>
    <string name="data_type">Data Type</string>
    <string name="integer_and_float_data_type">Integer and float data type</string>
    <string name="character_and_boolean_data_type">Character and Boolean data type</string>
    <string name="java_environment_oops_concepts"><![CDATA[Java Environment & OOPS Concepts]]></string>
    <string name="environment_oops_concepts"><![CDATA[Environment & OOPS Concepts]]></string>
    <string name="fundamentals_declaring_objects_in_java"><![CDATA[Fundamentals & Declaring Objects in Java]]></string>
    <string name="constructors_garbage_collection"><![CDATA[Constructors & Garbage Collection]]></string>
    <string name="java_lang_java_oi"><![CDATA[Java.lang & java.oi]]></string>
    <string name="reference">Reference</string>
    <string name="sanfoundry_provides_a_vast_collection_of_questions_and_answers_on_various_topics">Sanfoundry provides a vast collection of questions and answers on various topics.</string>
    <string name="sanfoundry">sanfoundry</string>
    <string name="syvum">Syvum</string>
    <string name="loop_array"><![CDATA[Loop & Array]]></string>
    <string name="_25_questions">25 Questions</string>
    <string name="quizlet">Quizlet</string>
    <string name="efaculty">efaculty</string>
</resources>