<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_800"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <!-- Content View -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Top Background -->
        <View
            android:id="@+id/topBackground"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@color/green_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Menu Icon -->
        <ImageView
            android:id="@+id/menu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_menu_24"
            android:contentDescription="Menu Icon"/>

        <!-- Rest of your layout content -->

        <!-- FrameLayout for Menu Container -->
        <FrameLayout
            android:id="@+id/menuContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="#80000000"
            app:layout_constraintTop_toBottomOf="@id/topBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <include layout="@layout/activity_menu_bar"/>

        </FrameLayout>

        <!-- Quest Label -->
        <TextView
            android:id="@+id/lblQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/quest"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Let's Play and Have Some Fun Labels -->
        <TextView
            android:id="@+id/lblLet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/let_s_play_and"
            android:textColor="@color/teal_200"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/lblQuest"
            app:layout_constraintStart_toStartOf="@id/lblQuest"
            app:layout_constraintTop_toBottomOf="@+id/lblQuest" />

        <TextView
            android:id="@+id/lblFun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_some_fun"
            android:textColor="@color/teal_200"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/lblQuest"
            app:layout_constraintTop_toBottomOf="@+id/lblLet" />

        <!-- Basic Level Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/basicLevel"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:cardBackgroundColor="@color/basic"
            app:cardCornerRadius="30dp"
            app:layout_constraintTop_toBottomOf="@id/lblFun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!-- Contents of Basic Level Card -->


            <LinearLayout
                android:id="@+id/cardStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgPlay"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/play"/>

                    <TextView
                        android:id="@+id/txtBasic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/basic"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multiple_choice"
                    android:textSize="16dp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_25_questions"
                    android:textSize="16dp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <ImageView
                android:layout_marginLeft="170dp"
                android:layout_marginTop="8dp"
                android:layout_width="170dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/javatransparent"/>
        </androidx.cardview.widget.CardView>

        <!-- Intermediate Level Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/intermediateLevelCardView"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:cardBackgroundColor="@color/lightBlue"
            app:cardCornerRadius="30dp"
            app:layout_constraintTop_toBottomOf="@id/basicLevel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!-- Contents of Intermediate Level Card -->
            <LinearLayout
                android:id="@+id/cardIntermediate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp">

                <LinearLayout
                    android:id="@+id/firstIntermediate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgLockInter"
                        android:layout_marginTop="2dp"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/baseline_lock_24"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intermediate"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="True or False"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20 Questions"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/intermediatewall"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="230dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/intermediate"/>

        </androidx.cardview.widget.CardView>

        <!-- Hard Level Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/hardLevelCardView"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:cardBackgroundColor="@color/Hard"
            app:cardCornerRadius="30dp"
            app:layout_constraintTop_toBottomOf="@id/intermediateLevelCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!-- Contents of Hard Level Card -->
            <LinearLayout
                android:id="@+id/hardCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp">

                <LinearLayout
                    android:id="@+id/firstHard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/lockHard"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/baseline_lock_24"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hard"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fill in the Blank"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10_questions"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/hardWall"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="220dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/debugging"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- NavigationView -->
    <com.google.android.material.navigation.NavigationView
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:id="@+id/navView"
        android:layout_gravity="start"
        app:headerLayout="@layout/activity_menu_bar"
        app:menu="@menu/nav_menu"
        app:itemIconTint="@color/green_200"
        app:itemTextColor="@color/white">

        <!-- NavigationView items go here -->

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
