<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_800"
    tools:context=".CreateBasic">

    <View
    android:id="@+id/topBackground"
    android:layout_width="0dp"
    android:layout_height="60dp"
    android:background="@color/green_600"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

    <ImageView
        android:id="@+id/imgBackBasicCreate"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/lblBasic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/study_guide"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBoardBasic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/lblBasic"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:outlineSpotShadowColor="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_intermediate"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:padding="8dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data Type:"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Operators and Control Statements"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Operators and Control Statements:"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Operators and Control Statements"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/java_environment_oops_concepts"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Object-Oriented-Programming"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Classes and Methods"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/fundamentals_declaring_objects_in_java"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Java Method and Constructor"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Garbage Collection"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Inheritance"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Object Class"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Abstract Class and Super"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Java.lang &amp; java.oi"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hard"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Method Overriding "
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/loop_array"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>